<resources>
    <string name="app_name">SmartStudentHelper</string>

    <string name="task_text">Название задачи</string>
    <string name="task_details_title">Заметка</string>
    <string name="save">Сохранить</string>
    <string name="completed">Выполнение</string>
    <string name="task_commentary">Комментарий к задаче</string>
    <string name="task_deadline">Дата сдачи задания</string>
    <string name="task_execution_time">Время выполнения задачи</string>
    <string name="task_reminder_date">Дата напоминания</string>







    <string name="lifehacks_text">Дописать текст подсказок</string>
    <string name="FAQ_text">Дописать часто задаваемые вопросы</string>
    <string name="priciples_text">Дописать основные принципы работы учебного заведения</string>

    <string name="how_to_beat_stress">Регулярное физическое упражнение: Физическая активность, такая как занятия спортом, бег, йога или прогулки на свежем воздухе, может помочь снять накопленное напряжение и улучшить ваше настроение. Она способствует выделению эндорфинов, естественных "гормонов счастья", которые снижают стресс и улучшают общее самочувствие.
    \n\nПравильное питание: Уделяйте внимание своему рациону и старайтесь употреблять питательные продукты. Избегайте излишнего потребления кофеина, сахара и обработанных продуктов, которые могут усугубить симптомы стресса. Вместо этого, увеличьте потребление свежих овощей, фруктов, орехов и других продуктов, богатых питательными веществами.
    \n\nУстановите границы: Не берите на себя слишком много обязанностей и научитесь говорить "нет", когда вам необходим отдых или время для восстановления. Установление границ поможет вам избежать перегрузки и сохранить баланс в жизни.
    \n\nПланирование и организация: Создайте планы и структуру в вашей повседневной жизни. Разделите большие задачи на более мелкие, установите приоритеты и составьте расписание. Это может помочь вам чувствовать контроль и уменьшить чувство беспорядка и стресса.
    \n\nСоциальная поддержка: Общение с друзьями, семьей или поддерживающей группой может помочь вам справиться со стрессом. Поделитесь своими чувствами и беспокойствами с близкими людьми, которые могут предложить поддержку, совет или просто выслушать вас.
    \n\nСамоуход: Не забывайте уделять время самому себе и заниматься теми вещами, которые приносят вам радость и удовлетворение. Это может быть чтение, просмотр фильмов, хобби, творческая деятельность или прогулки на природе. Придавайте значение своему физическому и эмоциональному благополучию.</string>

    <string name="which_books_to_read">"Не переживай: сила антистресса" (The Life-Changing Magic of Not Giving a F*ck) автора Сары Найт: Эта книга помогает освободиться от ненужных забот, сосредоточившись на том, что действительно имеет значение. Она предлагает стратегии, как управлять своим временем и энергией, а также как установить границы и сфокусироваться на собственном благополучии.
    \n\n"Как перестать беспокоиться и начать жить" (How to Stop Worrying and Start Living) автора Дейла Карнеги: Эта классическая книга предлагает советы и техники, как справиться со стрессом, тревогой и беспокойством. Она помогает изменить отношение к проблемам, принять их и найти способы справиться с ними.
    \n\n"Магия уборки" (The Life-Changing Magic of Tidying Up) автора Мари Кондо: Хотя эта книга не непосредственно связана с общением, она может помочь создать гармоничное и упорядоченное окружение, что в свою очередь может снизить стресс и создать чувство спокойствия. Книга предлагает метод Конмари для упорядочивания и приводит принципы организации жизни.
    \n\n"Как завоевывать друзей и оказывать влияние на людей" (How to Win Friends and Influence People) автора Дейла Карнеги: Эта книга предлагает практические советы о коммуникации, эмоциональном интеллекте и создании гармоничных отношений с другими людьми. Она помогает развить навыки эффективного общения и улучшить взаимодействие с окружающими.
    \n\n"Большой гайд по самопомощи" (The Big Leap) автора Гэя Хендрикса: В этой книге автор рассматривает тему личного роста, самосовершенствования и преодоления лимитирующих убеждений. Она помогает раскрыть ваш потенциал, справиться с внутренними барьерами и достичь большей гармонии и удовлетворенности в жизни.
    </string>

    <string name="bots_apps">Дописать текст для ботов и приложений для психологической помощи</string>

    <string name="problems_with_study">Вот несколько способов чтобы справиться со стрессом в процессе обучения:
    \n\nРазделите задачи на более маленькие: Разбейте сложные задачи на более маленькие и конкретные шаги. Это поможет вам четко определить, что именно нужно сделать, и создаст ощущение прогресса постепенно.
    \n\nОрганизуйте время и планируйте: Создайте расписание, в котором определены четкие временные рамки для выполнения заданий. Планирование поможет вам организовать свое время, снизить чувство беспорядка и повысить эффективность учебного процесса.
    \n\nРазвивайте навыки управления стрессом: Изучите и применяйте различные техники управления стрессом, такие как глубокое дыхание, медитация, прогулки на свежем воздухе, физическая активность или другие методы, которые вам нравятся и помогают расслабиться.
    \n\nИщите поддержку: Обратитесь за поддержкой к друзьям, семье, преподавателям или сокурсникам. Обсудите свои волнения и проблемы с ними. Иногда просто высказаться и услышать поддержку может снизить уровень стресса.
    \n\nПрактикуйте самоуход: Уделите время для самоухода и релаксации. Занимайтесь деятельностями, которые вам приятны и помогают расслабиться, такими как чтение, прогулки, слушание музыки, занятие хобби и т.д. Это поможет вам отвлечься от стресса и восстановить эмоциональное равновесие.
    \n\nОбратитесь к профессионалам: Если ваши вопросы и стресс связаны с учебной сферой и вы не можете справиться самостоятельно, обратитесь за помощью к преподавателям, советникам или специалистам в области учебного консультирования. Они могут предоставить вам дополнительную поддержку и руководство по разрешению ваших проблем.
    \n\nПоддерживайте здоровый образ жизни: Правильное питание, физическая активность и достаточный сон играют важную роль в управлении стрессом. Уделяйте время для здоровых привычек, которые помогут вам улучшить ваше физическое и эмоциональное состояние.</string>

    <string name="no_motivation_to_study">Понять причины: Попробуйте разобраться, почему у вас возникла эта отсутствующая мотивация. Возможно, вам не нравится выбранная специальность, у вас неприятный опыт с преподавателями или у вас возникли личные проблемы, которые влияют на вашу способность сосредоточиться на учебе. Разборка с причинами поможет вам лучше понять ситуацию и найти решения.
    \n\nПоставьте цели: Определите, что именно вы хотите достичь в учебе. Цели должны быть конкретными, измеримыми и достижимыми. Разбейте их на более маленькие, промежуточные задачи, чтобы иметь ощущение прогресса и достижений.
    \n\nИзучите интересующую вас тему: Если вам не нравится весь учебный материал, попробуйте сосредоточиться на тех аспектах, которые вам действительно интересны. Изучение интересующей вас темы может помочь вам воспринимать учебу более положительно и мотивировать вас продолжать.
    \n\nСоздайте план действий: Разработайте структурированный план, как достичь ваших учебных целей. Включите в него регулярное расписание для учебы, организацию времени и приоритеты. Такой план поможет вам организоваться и стать более систематичным в своих учебных усилиях.
    \n\nОбратитесь за поддержкой: Разговор с преподавателями, сокурсниками или советником по учебным вопросам может быть полезным. Поделитесь своими затруднениями и попросите совета или поддержки. Они могут предложить вам новые перспективы и ресурсы, которые помогут вам восстановить мотивацию.
    \n\nПоддерживайте здоровый образ жизни: Правильное питание, достаточный сон, физическая активность и умение расслабляться могут оказать положительное влияние на вашу мотивацию и уровень энергии. Уделите время самому себе и заботьтесь о своем физическом и эмоциональном благополучии.
    \n\nПомните о своей долгосрочной перспективе: Приближайте себя к мысли о том, как ваше образование в университете будет способствовать вашим долгосрочным целям и развитию. Это может помочь вам восстановить мотивацию, осознавая ценность и важность вашего образования.
    </string>

    <string name="how_to_beat_emotional_burnout">Отдохните и восстановитесь: Предоставьте себе время и пространство для отдыха. Уделите внимание своим физическим и эмоциональным потребностям. Отдыхайте, спите достаточно, занимайтесь релаксацией и уходом за собой. Важно восстановить энергию и уровень стресса.
    \n\nУстановите границы: Научитесь говорить "нет" и устанавливать границы в отношениях и обязательствах. Не берите на себя слишком много работы или ответственности. Уделите внимание своим собственным потребностям и установите приоритеты.
    \n\nПересмотрите свои цели и приоритеты: Оцените свои текущие цели и приоритеты. Возможно, вам стоит пересмотреть свои ожидания и сосредоточиться на том, что действительно важно для вашего благополучия и счастья. Разберитесь, какие цели вдохновляют вас и приносят радость, и нацелитесь на них.
    \n\nНайдите поддержку: Обратитесь к близким людям, друзьям или профессионалам за поддержкой и советом. Поговорите о своих чувствах и переживаниях. Может быть полезно обратиться к психологу или психотерапевту, чтобы получить дополнительную поддержку и помощь в решении проблем.
    \n\nПрактикуйте самозаботу: Уделите время для активностей, которые приносят вам радость и удовлетворение. Это могут быть хобби, спорт, медитация, чтение или другие способы релаксации. Самозабота позволяет вам зарядиться позитивной энергией и улучшить свое самочувствие.
    \n\nПересмотрите свою работу или учебу: Рассмотрите возможность изменения рабочей или учебной ситуации, если она является основной причиной вашего выгорания. Разговорите с руководством, преподавателями или карьерным консультантом о возможных вариантах, которые могут помочь вам справиться с нагрузкой.
    \n\nВосстановление баланса: Стремитесь найти баланс между работой, учебой и личной жизнью. Уделите время для отдыха, релаксации, социальных контактов и хобби. Это поможет вам восстановить энергию и насытить свою жизнь положительными и приятными моментами.
    </string>
</resources>