<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <EditText
        android:id="@+id/taskName"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="top"
        android:hint="@string/task_text"
        android:minHeight="200dp"
        android:padding="16dp" />

    <EditText
        android:id="@+id/taskCommentary"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="top"
        android:hint="@string/task_commentary"
        android:minHeight="200dp"
        android:padding="16dp" />

    <EditText
        android:id="@+id/taskDeadline"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="top"
        android:hint="@string/task_deadline"
        android:minHeight="200dp"
        android:padding="16dp" />

    <EditText
        android:id="@+id/taskExecutionTime"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="top"
        android:hint="@string/task_execution_time"
        android:minHeight="200dp"
        android:padding="16dp" />

    <EditText
        android:id="@+id/taskReminderDate"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="top"
        android:hint="@string/task_reminder_date"
        android:minHeight="200dp"
        android:padding="16dp" />

</LinearLayout>